Adds note about obsoleting this repo.

--- a/README
+++ b/README
@@ -1,3 +1,10 @@
+NOTE!!
+
+We are no long using this version of CraftIRC2.  We have switched to CraftIRC3
+and are using the version supplied by the original dev team.
+
+This repo is kept here for history purposes only!!!
+
 ATTENTION 
 Sept. 20, 2011
 
